--- a/package.json
+++ b/package.json
@@ -16,27 +16,37 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "babel-loader": "^10.0.0",
     "chart.js": "^4.4.9",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "^5.0.1",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "prevSstart": "react-scripts start",
+    "prevBbuild": "react-scripts build",
+    "start": "npx webpack serve",
     "prevStart": "webpack serve --config webpack.config.js",
-    "prevBuild": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "test": "jest",
     "eject": "react-scripts eject",
     "lint": "node -v && eslint --ext .tsx,.ts,.jsx,.js src/ --fix",
-    "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,scss,css,json,md}'"
+    "prettier": "prettier --write 'src/**/*.{js,jsx,ts,tsx,scss,css,json,md}'",
+    "tcm": "typed-css-modules src --pattern '**/*.module.scss'"
   },
   "eslintConfig": {
     "extends": [
@@ -70,6 +80,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.87.0",
     "ts-jest": "^29.3.2"
   }
